<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/common_spacing"
        android:background="#000000"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginBottom="@dimen/common_spacing"
            app:icon="@drawable/baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.AppTheme.IconButtonForImage" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_spacing"
            android:contentDescription="@string/description_post_menu"
            app:icon="@drawable/ic_more_vert_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/Widget.AppTheme.IconButtonForImage" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="back,menu" />


        <ImageView
            android:id="@+id/attachmentAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:layout_constraintTop_toBottomOf="@+id/header"
            tools:src="@tools:sample/avatars[10]" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="attachmentAll" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:contentDescription="@string/description_post_like"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/footer"
            app:icon="@drawable/ic_like_24dp"
            tools:checked="@sample/posts.json/data/likedByMe"
            tools:text="@sample/posts.json/data/likes"
            style="@style/Widget.AppTheme.LikeCheckBoxForImage" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:contentDescription="@string/description_post_share"
            app:layout_constraintStart_toEndOf="@+id/like"
            app:layout_constraintTop_toBottomOf="@id/footer"
            app:icon="@drawable/ic_share_24"
            style="@style/Widget.AppTheme.IconButtonForImage" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>